--- a/traccar-python-api/requirements.txt
+++ b/traccar-python-api/requirements.txt
@@ -13,6 +13,7 @@ aiomysql==0.2.0  # MySQL async driver
 # Authentication & Security
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+email-validator==2.1.1
 python-multipart==0.0.9
 
 # Caching & Background Tasks
