--- a/traccar-react-frontend/package.json
+++ b/traccar-react-frontend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mapbox/mapbox-gl-draw": "^1.5.0",
     "@mui/icons-material": "^7.3.1",
     "@mui/lab": "^7.0.0-beta.16",
     "@mui/material": "^7.3.1",
@@ -25,8 +26,9 @@
     "@mui/x-date-pickers": "^7.22.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/geojson": "^7946.0.14",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
-    "maplibre-gl": "^5.6.2",
+    "maplibre-gl": "^5.7.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.56.1",
@@ -49,8 +51,8 @@
     "@types/react-window": "^1.8.8",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
-    "@vitejs/plugin-react": "^5.0.1",
     "@vite-pwa/assets-generator": "^1.0.0",
+    "@vitejs/plugin-react": "^5.0.1",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.16",
