--- a/traccar-python-api/requirements.txt
+++ b/traccar-python-api/requirements.txt
@@ -3,6 +3,7 @@ fastapi==0.110.0
 uvicorn[standard]==0.29.0
 python-multipart==0.0.9
 websockets==12.0
+aiohttp==3.9.3
 
 # Database
 sqlalchemy==2.0.28
