feat: Add dual protocol support (TCP/UDP) for Suntech on port 5001
- Modified Suntech protocol to support both TCP and UDP on port 5001
- Updated protocol server configuration to handle multiple transport protocols
- Added pgAdmin to Docker Compose for PostgreSQL administration
- Exposed port 5001 in Docker Compose configuration
- Updated documentation and configuration examples
- Added PostgreSQL access guide

Changes:
- app/config.py: Changed from single 'protocol' to 'protocols' array
- app/protocols/protocol_server.py: Added support for multiple protocols per handler
- docker-compose.dev.yml: Added pgAdmin service and exposed port 5001
- env.example: Updated configuration example
- CURRENT_STATUS.md: Updated status to reflect dual protocol support
- POSTGRESQL_ACCESS_GUIDE.md: New guide for database access

Protocols now active:
- Suntech TCP: port 5001
- Suntech UDP: port 5001
- OsmAnd HTTP: port 5055

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -29,6 +29,25 @@ services:
       timeout: 3s
       retries: 5
 
+  # pgAdmin - PostgreSQL Administration Tool
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@traccar.com
+      PGADMIN_DEFAULT_PASSWORD: admin123
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+    ports:
+      - "5050:80"
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    depends_on:
+      - postgres
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:80/misc/ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
   # Python FastAPI Backend
   api:
     build:
@@ -36,7 +55,8 @@ services:
       dockerfile: Dockerfile.dev
     ports:
       - "8000:8000"
-      - "5055:5055"
+      - "5001:5001"  # Suntech protocol (TCP/UDP)
+      - "5055:5055"  # OsmAnd protocol (HTTP)
     environment:
       - DEBUG=true
       - DATABASE_URL=postgresql+asyncpg://traccar:traccar123@postgres:5432/traccar
@@ -77,3 +97,4 @@ services:
 volumes:
   postgres_data:
   redis_data:
+  pgadmin_data:
