--- a/traccar-python-api/env.example
+++ b/traccar-python-api/env.example
@@ -27,7 +27,7 @@ CELERY_RESULT_BACKEND=redis://localhost:6379/1
 LOG_LEVEL=INFO
 
 # Protocol Servers
-PROTOCOL_SERVERS={"suntech": {"enabled": true, "port": 5001, "protocol": "tcp"}}
+PROTOCOL_SERVERS={"suntech": {"enabled": true, "port": 5001, "protocols": ["tcp", "udp"]}}
 
 # Geofencing
 DEFAULT_GEOFENCE_BUFFER=100.0
