--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -61,6 +61,8 @@ services:
       - DEBUG=true
       - DATABASE_URL=postgresql+asyncpg://traccar:traccar123@postgres:5432/traccar
       - REDIS_URL=redis://redis:6379/0
+      - CELERY_BROKER_URL=redis://redis:6379/1
+      - CELERY_RESULT_BACKEND=redis://redis:6379/1
       - SECRET_KEY=dev-secret-key-change-in-production
       - ALLOWED_HOSTS=["*"]
     volumes:
