--- a/traccar-python-api/requirements.txt
+++ b/traccar-python-api/requirements.txt
@@ -16,6 +16,8 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 email-validator==2.1.1
 python-multipart==0.0.9
+pyotp==2.9.0  # TOTP for 2FA
+qrcode[pil]==7.4.2  # QR code generation for 2FA
 
 # Caching & Background Tasks
 redis==5.0.3
