--- a/traccar-react-frontend/package.json
+++ b/traccar-react-frontend/package.json
@@ -22,6 +22,7 @@
     "@mui/icons-material": "^7.3.1",
     "@mui/lab": "^7.0.0-beta.16",
     "@mui/material": "^7.3.1",
+    "@mui/styles": "^6.5.0",
     "@mui/x-data-grid": "^7.22.2",
     "@mui/x-date-pickers": "^7.22.2",
     "@reduxjs/toolkit": "^2.8.2",
@@ -33,6 +34,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.56.1",
     "react-redux": "^9.2.0",
+    "react-rnd": "^10.5.2",
     "react-router-dom": "^7.8.1",
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^1.8.11",
