--- a/traccar-react-frontend/package.json
+++ b/traccar-react-frontend/package.json
@@ -19,6 +19,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mapbox/mapbox-gl-draw": "^1.5.0",
+    "@maplibre/maplibre-gl-geocoder": "^1.9.0",
     "@mui/icons-material": "^7.3.1",
     "@mui/lab": "^7.0.0-beta.16",
     "@mui/material": "^7.3.1",
