--- a/traccar-react-frontend/package.json
+++ b/traccar-react-frontend/package.json
@@ -30,10 +30,13 @@
     "@types/geojson": "^7946.0.14",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "i18next": "^25.5.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "maplibre-gl": "^5.7.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.56.1",
+    "react-i18next": "^15.7.3",
     "react-redux": "^9.2.0",
     "react-rnd": "^10.5.2",
     "react-router-dom": "^7.8.1",
